[gd_scene load_steps=9 format=3 uid="uid://23375gdktrf3"]

[ext_resource type="Texture2D" uid="uid://broul5cj6rrbk" path="res://images/wall1.webp" id="1_guig8"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_0ps76"]
[ext_resource type="Texture2D" uid="uid://b8jj24jgf3yef" path="res://images/CharacterSprite.png" id="3_iyq7q"]
[ext_resource type="Texture2D" uid="uid://nw071wpwo0ye" path="res://images/Pampa1.webp" id="4_120t6"]
[ext_resource type="Script" path="res://scripts/horse.gd" id="5_00a7k"]
[ext_resource type="Texture2D" uid="uid://bu55wvnl2i1f4" path="res://images/Horse.png" id="5_3wycr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bbdy"]
size = Vector2(20, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ae15g"]
size = Vector2(38, 2.5)

[node name="Node2D" type="Node2D"]

[node name="Wall1" type="Sprite2D" parent="."]
position = Vector2(117, 542)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_guig8")

[node name="Wall2" type="Sprite2D" parent="."]
position = Vector2(369, 542)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_guig8")

[node name="Wall3" type="Sprite2D" parent="."]
position = Vector2(625, 542)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_guig8")

[node name="Pampa1" type="Sprite2D" parent="."]
position = Vector2(90, 303)
scale = Vector2(0.173828, 0.173828)
texture = ExtResource("4_120t6")

[node name="Pampa2" type="Sprite2D" parent="."]
position = Vector2(268, 303)
scale = Vector2(0.174, 0.174)
texture = ExtResource("4_120t6")

[node name="Pampa3" type="Sprite2D" parent="."]
position = Vector2(446, 303)
scale = Vector2(0.174, 0.174)
texture = ExtResource("4_120t6")

[node name="Pampa4" type="Sprite2D" parent="."]
position = Vector2(622, 303)
scale = Vector2(0.174, 0.174)
texture = ExtResource("4_120t6")

[node name="Pampa5" type="Sprite2D" parent="."]
position = Vector2(797, 303)
scale = Vector2(0.174, 0.174)
texture = ExtResource("4_120t6")

[node name="Pampa6" type="Sprite2D" parent="."]
position = Vector2(975, 303)
scale = Vector2(0.174, 0.174)
texture = ExtResource("4_120t6")

[node name="Player" type="Node2D" parent="."]
script = ExtResource("2_0ps76")

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
position = Vector2(58, 318)
scale = Vector2(0.04, 0.04)
texture = ExtResource("3_iyq7q")

[node name="PlayerArea2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerArea2D"]
position = Vector2(58, 317.5)
shape = SubResource("RectangleShape2D_4bbdy")

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2(160, 302)
zoom = Vector2(3.6, 3.6)

[node name="Horse" type="Node2D" parent="."]
script = ExtResource("5_00a7k")

[node name="HorseSprite" type="Sprite2D" parent="Horse"]
position = Vector2(28, 318)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_3wycr")
flip_h = true

[node name="Area2D" type="Area2D" parent="Horse"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Horse/Area2D"]
position = Vector2(29, 314)
shape = SubResource("RectangleShape2D_ae15g")

[connection signal="area_entered" from="Horse/Area2D" to="Horse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Horse/Area2D" to="Horse" method="_on_area_2d_area_exited"]
